--- a/config
+++ b/config
@@ -5,8 +5,8 @@ external-url-viewer "urlscan -dc -r 'linkhandler {}'"
 
 bind-key j down
 bind-key k up
-bind-key j next articlelist
-bind-key k prev articlelist
+#bind-key j next articlelist
+#bind-key k prev articlelist
 bind-key J next-feed articlelist
 bind-key K prev-feed articlelist
 bind-key G end
