--- a/config
+++ b/config
@@ -1,5 +1,7 @@
 #show-read-feeds no
 auto-reload yes
+reload-threads 100
+browser "firefox %u"
 
 external-url-viewer "urlscan -dc -r 'linkhandler {}'"
 
